CTW: C2 (Shenandoah) compilation fails with SEGV in SBC2Support::pin_and_expand

XMLWordPrintable

    • gc
    • b30

        $ cd test/hotspot/jtreg/testlibrary/ctw
        $ make
        $ cd dist
        $ wget https://repo1.maven.org/maven2/com/github/latency4j/latency4j/1.0/latency4j-1.0.jar
        $ export JAVA_HOME=<point to fastdebug build>
        $ JAVA_OPTIONS="-XX:+UseShenandoahGC" ./ctw.sh latency4j-1.0.jar

        # SIGSEGV (0xb) at pc=0x00007f626d3a6aa9, pid=34849, tid=34859
        #
        # JRE version: OpenJDK Runtime Environment (16.0) (fastdebug build 16-internal+0-adhoc.shade.jdk-jdk)
        # Java VM: OpenJDK 64-Bit Server VM (fastdebug 16-internal+0-adhoc.shade.jdk-jdk, mixed mode, sharing, tiered, compressed oops, shenandoah gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x1520aa9] ShenandoahBarrierC2Support::pin_and_expand(PhaseIdealLoop*)+0x7a9

        Current CompileTask:
        C2: 1411 942 b 4 org.latency4j.processing.AsynchronousLatencyMonitor::resolveTargetMethodName (91 bytes)

        Stack: [0x00007f61f73bb000,0x00007f61f74bc000], sp=0x00007f61f74b5920, free space=1002k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x1520aa9] ShenandoahBarrierC2Support::pin_and_expand(PhaseIdealLoop*)+0x7a9
        V [libjvm.so+0x145ee8f] ShenandoahBarrierSetC2::optimize_loops(PhaseIdealLoop*, LoopOptsMode, VectorSet&, Node_Stack&, Node_List&) const+0xaf
        V [libjvm.so+0x10784d3] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0xb53
        V [libjvm.so+0x15190d6] ShenandoahBarrierC2Support::expand(Compile*, PhaseIterGVN&)+0x266
        V [libjvm.so+0x145ecef] ShenandoahBarrierSetC2::expand_barriers(Compile*, PhaseIterGVN&) const+0xf
        V [libjvm.so+0x85d69c] Compile::Optimize()+0xcdc
        V [libjvm.so+0x85e79b] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xe3b

              Assignee:
              Roland Westrelin
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: