8247824: CTW: C2 (Shenandoah) compilation fails with SEGV in SBC2Support::pin_and_expand

Reviewed-by: rkennke, thartmann